test/tests/WrongGenericParameterCount.expected
WrongGenericParameterCount.panda:1:7: error: 'panda.collections.Array' expected 1 generic parameter, but found 2
WrongGenericParameterCount.panda:3:7: error: 'panda.collections.HashMap' expected 2 generic parameters, but found 1
2 errors
